--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ config/application.yml
 # Ignore all logfiles and tempfiles.
 ###############################################################################################
 /log/*.log
-/tmp
+**/tmp/*
 
 
 ###############################################################################################
